@@ -46,6 +46,16 @@
         </includes>
       </resource>
     </resources>
+      <plugins>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                  <source>9</source>
+                  <target>9</target><compilerArgs>--enable-preview</compilerArgs>
+              </configuration>
+          </plugin>
+      </plugins>
   </build>
 
 </project>
